[package]
name = "trouble-maker"
version = "0.1.0"
authors = ["ijoyce"]
edition = "2018"

[dependencies]
hyper = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.7"
tokio = { version = "1.0", features = ["full"] }
http = "0.2"
regex = "1"
config = "0.10"
lazy_static = "1.4.0"
